--- a/SeSACStudyRecruitSLP/Info.plist
+++ b/SeSACStudyRecruitSLP/Info.plist
@@ -6,6 +6,7 @@
 	<array>
 		<string>NotoSansCJKkr-Medium.otf</string>
 		<string>NotoSansCJKkr-Regular.otf</string>
+		<string>Dongle-Regular.ttf</string>
 	</array>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
