--- a/SeSACStudyRecruitSLP/Info.plist
+++ b/SeSACStudyRecruitSLP/Info.plist
@@ -2,6 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSAppTransportSecurity</key>
+        <dict>
+            <key>NSExceptionDomains</key>
+            <dict>
+                <key>api.sesac.co.kr:1207</key>
+                <dict/>
+                <key>NSIncludesSubDomains</key>
+                <true/>
+                <key>NSExceptionAllowsInsecureHTTPLoads</key>
+                <true/>
+            </dict>
+            <key>NSAllowsArbitraryLoads</key>
+            <false/>
+        </dict>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
