Feat: Change the launch screen storyboard to code based vc

--- a/SeSACStudyRecruitSLP/Info.plist
+++ b/SeSACStudyRecruitSLP/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>사용자의 위치 기반으로 주변의 타사용자를 확인하고, 타 사용자에게 사용자의 위치를 지도로 알려주기 위함</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -39,11 +37,13 @@
 					<string>Default Configuration</string>
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
 				</dict>
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
